--- a/client/src/components/utils/FileUpload.css
+++ b/client/src/components/utils/FileUpload.css
@@ -22,3 +22,9 @@
     height: 24rem;
     overflow: scroll;
 }
+
+.dropzone__showCase img {
+    min-width: 30rem;
+    width: 30rem;
+    height: 24rem;
+}
