Limits the number of products show. Added Load more button.

--- a/client/src/components/views/LandingPage/LandingPage.css
+++ b/client/src/components/views/LandingPage/LandingPage.css
@@ -14,7 +14,8 @@
     align-items: center;
 }
 
-.landingPage__showProducts {
+.landingPage__showProducts img{
+    object-fit: cover;
 }
 
 .landingPage__loadMore {
