Added search functionality.

--- a/client/src/components/views/LandingPage/LandingPage.css
+++ b/client/src/components/views/LandingPage/LandingPage.css
@@ -23,3 +23,9 @@
     justify-content: center;
     margin: 3rem auto;
 }
+
+.landingPage__searchFilter {
+    display: flex;
+    justify-content: flex-end;
+    margin: 1rem auto;
+}
